--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         </div>
 
                         <div class="home-img padd-15">
-                            <img src="4rachid.jpg" alt="hero image">
+                            <img src="4rachid.WEBP" alt="hero image">
                         </div>
                     </div>
                 </div>
